rewrite_to_chrome_style: Exclude methods before checking IsBlinkOrWTF

The IsBlinkOrWTFMethod asserts that the method is not doing crazy
overrides, but it will fire for destructors which we aren't trying to
rename anyways. So exclude those before trying to see if we want to
rename it.

R=dcheng
BUG=593446

Review URL: https://codereview.chromium.org/1778963003

Cr-Commit-Position: refs/heads/master@{#380228}

Former-commit-id: e27ff645c0bfb460855b825f08beda583d71a8e5